I modified warning to info

--- a/password_generator/generator/templates/generator/home.html
+++ b/password_generator/generator/templates/generator/home.html
@@ -1,7 +1,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <div class="container text-center">
     <h1 class="alert alert-success">Random Password Generator</h1>
-    <form action="{% url 'password'%}" class="alert alert-warning">
+    <form action="{% url 'password'%}" class="alert alert-info">
         <select name="length">
             <option value="6">6</option>
              <option value="7">7</option>
